Corrected alignment of main

--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,8 @@
 main {
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
   gap: 0.8em;
-  height: 80%;
+  max-height: 80%;
   overflow: scroll;
   scrollbar-width: thin;
   scroll-behavior: smooth;
